[gd_scene load_steps=14 format=3 uid="uid://c4hbcucvamyvl"]

[ext_resource type="Texture2D" uid="uid://ccjhuu5bqk1e0" path="res://assets/background/background_layer_1.png" id="1_vopiv"]
[ext_resource type="Script" path="res://scripts/Blacksmith.gd" id="2_0likq"]
[ext_resource type="Theme" uid="uid://ytuwofygfcvs" path="res://assets/GUI/Themes/GUI_theme.tres" id="3_fry4b"]
[ext_resource type="PackedScene" uid="uid://thtolow3x80e" path="res://scenes/subscenes/main_character/main_character.tscn" id="3_sgdc7"]
[ext_resource type="Texture2D" uid="uid://b7fxd6kp68kg2" path="res://assets/shop/blacksmith_anim.png" id="4_nyg58"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1nmcc"]
atlas = ExtResource("4_nyg58")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4kgt"]
atlas = ExtResource("4_nyg58")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifwsh"]
atlas = ExtResource("4_nyg58")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nphwn"]
atlas = ExtResource("4_nyg58")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7xcu"]
atlas = ExtResource("4_nyg58")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee00q"]
atlas = ExtResource("4_nyg58")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c16b1"]
atlas = ExtResource("4_nyg58")
region = Rect2(576, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_clq17"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nmcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4kgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifwsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nphwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7xcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee00q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c16b1")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="BlacksmithMenu" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6, 6)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_vopiv")
metadata/_edit_lock_ = true

[node name="Blacksmith" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("2_0likq")

[node name="CurrentOrbs" type="Panel" parent="Blacksmith"]
layout_mode = 0
offset_left = 656.0
offset_top = 424.0
offset_right = 1032.0
offset_bottom = 808.0
theme = ExtResource("3_fry4b")

[node name="StatsContainer" type="VBoxContainer" parent="Blacksmith/CurrentOrbs"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
offset_left = 58.0
offset_top = 55.0
offset_right = 358.0
offset_bottom = 328.0
theme_override_constants/separation = 20

[node name="LabelTitle" type="Label" parent="Blacksmith/CurrentOrbs/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Elemental Orbs"

[node name="LabelWater" type="Label" parent="Blacksmith/CurrentOrbs/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Water"

[node name="LabelEarth" type="Label" parent="Blacksmith/CurrentOrbs/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Earth"

[node name="LabelFire" type="Label" parent="Blacksmith/CurrentOrbs/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Fire"

[node name="LabelWind" type="Label" parent="Blacksmith/CurrentOrbs/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Wind"

[node name="WeaponMods" type="Panel" parent="Blacksmith"]
layout_mode = 0
offset_left = 8.0
offset_top = 208.0
offset_right = 648.0
offset_bottom = 568.0
theme = ExtResource("3_fry4b")

[node name="LabelTitle" type="Label" parent="Blacksmith/WeaponMods"]
layout_mode = 2
offset_left = 80.0
offset_top = 56.0
offset_right = 539.0
offset_bottom = 106.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Weapon mods"

[node name="ModsContainer" type="VBoxContainer" parent="Blacksmith/WeaponMods"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
offset_left = 105.0
offset_top = 95.0
offset_right = 601.0
offset_bottom = 346.0
theme_override_constants/separation = 20

[node name="LabelMod1" type="Label" parent="Blacksmith/WeaponMods/ModsContainer"]
layout_mode = 2
text = "--- Empty Mod ---"

[node name="LabelMod2" type="Label" parent="Blacksmith/WeaponMods/ModsContainer"]
layout_mode = 2
text = "--- Empty Mod ---"

[node name="LabelMod3" type="Label" parent="Blacksmith/WeaponMods/ModsContainer"]
layout_mode = 2
text = "--- Empty Mod ---"

[node name="LabelMod4" type="Label" parent="Blacksmith/WeaponMods/ModsContainer"]
layout_mode = 2
text = "--- Empty Mod ---"

[node name="CurrentStats" type="Panel" parent="Blacksmith"]
layout_mode = 0
offset_left = 656.0
offset_top = 8.0
offset_right = 1032.0
offset_bottom = 400.0
theme = ExtResource("3_fry4b")

[node name="StatsContainer" type="VBoxContainer" parent="Blacksmith/CurrentStats"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
offset_left = 54.0
offset_top = 61.0
offset_right = 354.0
offset_bottom = 345.0
theme_override_constants/separation = 20

[node name="LabelTitle" type="Label" parent="Blacksmith/CurrentStats/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Player's stats"

[node name="LabelStrength" type="Label" parent="Blacksmith/CurrentStats/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Strength"

[node name="LabelVitality" type="Label" parent="Blacksmith/CurrentStats/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Vitality"

[node name="LabelIntelligence" type="Label" parent="Blacksmith/CurrentStats/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Intelligence"

[node name="LabelSpeed" type="Label" parent="Blacksmith/CurrentStats/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Speed"

[node name="Panel" type="Panel" parent="Blacksmith"]
layout_mode = 0
offset_left = 1048.0
offset_top = 12.0
offset_right = 1896.0
offset_bottom = 1039.0
theme = ExtResource("3_fry4b")

[node name="CloseButton" type="Button" parent="Blacksmith/Panel"]
layout_mode = 2
offset_left = 112.0
offset_top = 828.0
offset_right = 728.0
offset_bottom = 930.0
theme_override_font_sizes/font_size = 48
text = "EXIT BLACKSMITH"

[node name="HBoxContainer" type="HBoxContainer" parent="Blacksmith/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -331.5
offset_right = 224.0
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ItemsContainerLabel" type="VBoxContainer" parent="Blacksmith/Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ItemsContainer" type="VBoxContainer" parent="Blacksmith/Panel/HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="ResetButton" type="Button" parent="Blacksmith/Panel"]
layout_mode = 2
offset_left = 112.0
offset_top = 660.0
offset_right = 728.0
offset_bottom = 764.0
size_flags_vertical = 8
text = "Remove all mods - 200V"

[node name="CharacterBody2D" parent="." instance=ExtResource("3_sgdc7")]
visible = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(528, 904)
scale = Vector2(5.84856, 5.84856)
sprite_frames = SubResource("SpriteFrames_clq17")
autoplay = "default"

[node name="Chatbox" type="Panel" parent="AnimatedSprite2D"]
visible = false
offset_left = -89.0
offset_top = -56.0
offset_right = -11.0
offset_bottom = 4.0
theme = ExtResource("3_fry4b")

[node name="RichTextLabel" type="RichTextLabel" parent="AnimatedSprite2D/Chatbox"]
layout_mode = 0
offset_left = 11.0
offset_top = 8.0
offset_right = 66.0
offset_bottom = 52.0
theme_override_font_sizes/normal_font_size = 16
text = "TEST"
fit_content = true
scroll_active = false
